[tool.poetry]
name = "u2net"
version = "0.1.0"
description = ""
authors = ["Jay Mody <jay@praxispioneering.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.22.1"
Pillow = "9.0.0"
scikit-image = "0.19.1"
torch = "1.11.0"
torchvision = "0.12.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
ipykernel = "6.7.0"
isort = "5.10.1"
pylint = "2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = ["C", "R", "unspecified-encoding", "abstract-method"]
generated-members = ["torch"]
